登陆界面整理完成

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorme_bg">#2E3257</color>
     <color name="wdet">#f4f4f4</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000</color>
     <color name="red">#E22018</color>
     <color name="yellow">#FFF79A</color>
     <color name="orrange">#FF8C1C</color>
