--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <dimen name="px19">19px</dimen>
     <dimen name="px20">20px</dimen>
     <dimen name="px25">25px</dimen>
+    <dimen name="px28">28px</dimen>
     <dimen name="px30">30px</dimen>
     <dimen name="px31">31px</dimen>
     <dimen name="px32">32px</dimen>
@@ -48,6 +49,7 @@
     <dimen name="px70">70px</dimen>
     <dimen name="px80">80px</dimen>
     <dimen name="px85">85px</dimen>
+    <dimen name="px88">88px</dimen>
     <dimen name="px90">90px</dimen>
     <dimen name="px100">100px</dimen>
     <dimen name="px110">110px</dimen>
@@ -56,6 +58,9 @@
     <dimen name="px170">170px</dimen>
     <dimen name="px200">200px</dimen>
     <dimen name="px250">250px</dimen>
+    <dimen name="px260">260px</dimen>
     <dimen name="px350">350px</dimen>
+    <dimen name="px410">410px</dimen>
     <dimen name="px420">420px</dimen>
+    <dimen name="px600">600px</dimen>
 </resources>
