--- a/app/src/main/res/layout/activity_forget_pass_word.xml
+++ b/app/src/main/res/layout/activity_forget_pass_word.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_forget_pass_word"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,28 +14,56 @@
             android:id="@+id/ftoolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#16BB91"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:title="@string/forget_password2" />
+            android:background="@color/title_bg"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            <com.zhy.autolayout.AutoLinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <ImageView android:id="@+id/img_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/sel_backbg"
+                    android:src="@drawable/ic_back"/>
+
+                <View android:layout_marginLeft="@dimen/px15"
+                    android:layout_width="@dimen/px02"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"/>
+
+                <TextView android:id="@+id/tv_title"
+                    android:layout_marginLeft="@dimen/px15"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:text="@string/forget_password2"
+                    android:textSize="@dimen/px40"/>
+
+            </com.zhy.autolayout.AutoLinearLayout>
+
+
+
+        </android.support.v7.widget.Toolbar>
 
 
         <EditText
             android:id="@+id/edt_phone"
             android:layout_width="match_parent"
-            android:layout_height="90px"
+            android:layout_height="@dimen/px90"
             android:layout_below="@+id/ftoolbar"
             android:layout_marginBottom="@dimen/px30"
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginRight="@dimen/px30"
-            android:layout_marginTop="100px"
+            android:layout_marginTop="@dimen/px100"
             android:background="@color/blue"
             android:gravity="left|center"
-            android:hint="请输入手机号码"
+            android:hint="@string/enter_phone"
             android:inputType="phone"
             android:maxLength="11"
-            android:paddingLeft="20px"
+            android:paddingLeft="@dimen/px20"
             android:textColor="@color/black"
-            android:textSize="32px" />
+            android:textSize="@dimen/px32" />
 
 
         <com.zhy.autolayout.AutoRelativeLayout
@@ -49,29 +76,29 @@
 
             <EditText
                 android:id="@+id/edt_code"
-                android:layout_width="450px"
-                android:layout_height="90px"
+                android:layout_width="@dimen/px450"
+                android:layout_height="@dimen/px90"
                 android:layout_alignParentLeft="true"
-                android:layout_marginRight="15px"
+                android:layout_marginRight="@dimen/px15"
                 android:background="@drawable/blue_dep_cricle"
                 android:hint="@string/please_input_verification_code"
-                android:paddingLeft="20px"
-                android:paddingRight="20px"
+                android:paddingLeft="@dimen/px20"
+                android:paddingRight="@dimen/px20"
                 android:textColor="@color/black"
-                android:textSize="32px" />
+                android:textSize="@dimen/px32" />
 
             <Button
                 android:id="@+id/btn_codenumber"
                 android:layout_width="wrap_content"
-                android:layout_height="90px"
+                android:layout_height="@dimen/px90"
                 android:layout_alignParentRight="true"
                 android:layout_toRightOf="@id/edt_code"
                 android:background="@drawable/shape_color_pwd2"
-                android:paddingLeft="20px"
-                android:paddingRight="20px"
-                android:text="获取验证码"
+                android:paddingLeft="@dimen/px20"
+                android:paddingRight="@dimen/px20"
+                android:text="@string/get_send_code"
                 android:textColor="@color/white"
-                android:textSize="@dimen/px28" />
+                android:textSize="@dimen/px25" />
 
         </com.zhy.autolayout.AutoRelativeLayout>
 
@@ -79,85 +106,52 @@
         <EditText
             android:id="@+id/edt_new_pwds"
             android:layout_width="match_parent"
-            android:layout_height="90px"
+            android:layout_height="@dimen/px90"
             android:layout_below="@+id/rel"
             android:layout_margin="@dimen/px30"
             android:background="@color/blue"
             android:digits="@string/rule_password"
             android:gravity="left|center"
-            android:hint="请输入新密码"
+            android:hint="@string/enter_new_pwds"
             android:inputType="textPassword"
             android:maxLength="30"
             android:minEms="6"
-            android:paddingLeft="20px"
+            android:paddingLeft="@dimen/px20"
             android:textColor="@color/black"
-            android:textSize="32px" />
+            android:textSize="@dimen/px32" />
 
         <EditText
             android:id="@+id/edt_pwds_ok"
             android:layout_width="match_parent"
-            android:layout_height="90px"
+            android:layout_height="@dimen/px90"
             android:layout_below="@+id/edt_new_pwds"
             android:layout_marginBottom="@dimen/px30"
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginRight="@dimen/px30"
             android:background="@color/blue"
             android:gravity="left|center"
-            android:hint="密码确认"
+            android:hint="@string/enter_new_pwds_again"
             android:inputType="textPassword"
             android:maxLength="30"
             android:minEms="6"
-            android:paddingLeft="20px"
+            android:paddingLeft="@dimen/px20"
             android:digits="@string/rule_password"
             android:textColor="@color/black"
-            android:textSize="32px" />
+            android:textSize="@dimen/px32" />
 
         <Button
             android:id="@+id/btn_ok"
             android:layout_width="match_parent"
-            android:layout_height="90px"
+            android:layout_height="@dimen/px90"
             android:layout_below="@+id/edt_pwds_ok"
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginRight="@dimen/px30"
             android:layout_marginTop="@dimen/px50"
             android:background="@drawable/blue_dep_bg"
-            android:text="确定"
+            android:text="@string/determine"
             android:textColor="@color/white"
-            android:textSize="32px" />
+            android:textSize="@dimen/px32" />
     </com.zhy.autolayout.AutoRelativeLayout>
-    <!--加载页面-->
 
-    <com.zhy.autolayout.AutoRelativeLayout
-        android:id="@+id/rel_loading"
-        android:layout_width="260px"
-        android:layout_height="250px"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/shape_loading"
-        android:visibility="gone">
-
-
-        <pl.droidsonroids.gif.GifImageView
-            android:id="@+id/gifView_forgetpass"
-            android:layout_width="260px"
-            android:layout_height="260px"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="-20px"
-            android:scaleType="centerInside"
-            android:src="@mipmap/loaging">
-        </pl.droidsonroids.gif.GifImageView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20px"
-            android:text="@string/please_waitting"
-            android:textColor="#fff"
-            android:textSize="28px" />
-
-
-    </com.zhy.autolayout.AutoRelativeLayout>
 
 </com.zhy.autolayout.AutoRelativeLayout>
