--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,19 @@
         <item name="android:layout_gravity">center</item>
     </style>
 
+    <style name="TextViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/px40</item>
+        <item name="android:textSize">@dimen/px25</item>
+    </style>
+
+    <style name="ViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/px02</item>
+        <item name="android:background">#E9EDEE</item>
+        <item name="android:layout_marginLeft">@dimen/px40</item>
+        <item name="android:layout_marginRight">@dimen/px40</item>
+    </style>
+
 </resources>
