--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -22,10 +22,10 @@
                 android:background="@color/colorme_bg">
 
 
-                <TextView android:id="@+id/tv_version"
+                <TextView android:id="@+id/tv_version_up"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="当前版本：司机版"
+                    android:text="@string/tv_version_owner"
                     android:textColor="@color/write"
                     android:layout_marginTop="@dimen/px30"
                     android:layout_marginLeft="@dimen/px60"/>
@@ -35,7 +35,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/px20"
-                    android:layout_below="@+id/tv_version"
+                    android:layout_below="@+id/tv_version_up"
                     android:gravity="center">
 
                     <com.zhy.autolayout.AutoLinearLayout
