--- a/app/src/main/res/layout/activity_editext.xml
+++ b/app/src/main/res/layout/activity_editext.xml
@@ -10,28 +10,42 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/title_bg"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
         <com.zhy.autolayout.AutoLinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal">
-            <ImageView android:id="@+id/img_back"
+
+            <ImageView
+                android:id="@+id/img_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/sel_backbg"
-                android:src="@drawable/ic_back"/>
+                android:src="@drawable/ic_back" />
 
-            <View android:layout_marginLeft="@dimen/px15"
+            <View
                 android:layout_width="@dimen/px02"
                 android:layout_height="match_parent"
-                android:background="@color/white"/>
-
-            <TextView android:id="@+id/tv_title"
                 android:layout_marginLeft="@dimen/px15"
+                android:background="@color/white" />
+
+            <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:layout_marginLeft="@dimen/px15"
                 android:text="editext"
+                android:textColor="@color/white"
+                android:textSize="@dimen/px40" />
+
+
+            <TextView android:id="@+id/tv_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/saves"
+                android:background="@drawable/sel_backbg"
+                android:layout_marginLeft="@dimen/px400"
                 android:textSize="@dimen/px40"/>
 
         </com.zhy.autolayout.AutoLinearLayout>
