--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -59,10 +59,13 @@
     <dimen name="px200">200px</dimen>
     <dimen name="px250">250px</dimen>
     <dimen name="px260">260px</dimen>
+    <dimen name="px320">320px</dimen>
     <dimen name="px350">350px</dimen>
     <dimen name="px400">400px</dimen>
     <dimen name="px410">410px</dimen>
     <dimen name="px420">420px</dimen>
     <dimen name="px450">450px</dimen>
+    <dimen name="px500">500px</dimen>
     <dimen name="px600">600px</dimen>
+    <dimen name="px700">700px</dimen>
 </resources>
