--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -51,9 +51,11 @@
     <dimen name="px85">85px</dimen>
     <dimen name="px88">88px</dimen>
     <dimen name="px90">90px</dimen>
+    <dimen name="px95">95px</dimen>
     <dimen name="px100">100px</dimen>
     <dimen name="px110">110px</dimen>
     <dimen name="px120">120px</dimen>
+    <dimen name="px150">150px</dimen>
     <dimen name="px160">160px</dimen>
     <dimen name="px170">170px</dimen>
     <dimen name="px200">200px</dimen>
