--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,5 +49,6 @@
         <item name="android:layout_height">@dimen/px500</item>
         <item name="android:layout_marginTop">@dimen/px40</item>
         <item name="android:layout_gravity">center</item>
+        <item name="android:visibility">gone</item>
     </style>
 </resources>
