--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -91,4 +91,6 @@
     <color name="blue_dep">#0075AA</color>
     <color name="dark_six">#666666</color>
     <color name="white_four">#D4D4D4</color>
+    <color name="bgitem">#FF8C00</color>
+
 </resources>
